styles/style.css
/* ... */
.form__checkbox:checked ~ .form__checkmark {
  background-color: #E52025;
}

.form__data--blue:hover .form__checkbox ~ .form__checkmark {
  background-color: #3B82AD;
}

.form__checkbox--blue:checked ~ .form__checkmark {
  background-color: #3B82AD;
}

.form__checkmark:after, .form__checkmark:before {
  content: "";
  position: absolute;
  display: none;
}

.form__checkbox:checked ~ .form__checkmark:after {
  display: block;
}

.form__checkbox:checked ~ .form__checkmark:before {
  display: block;
}

.form__checkmark:after, .form__checkmark:before {
  left: 7px;
  top: -7px;
  width: 1px;
  height: 30px;
  border: solid white;
  border-width: 0 1px 1px 0;
}

.form__checkmark:after {
  -webkit-transform: rotate(45deg);
          transform: rotate(45deg);
}

.form__checkmark:before {
  -webkit-transform: rotate(-45deg);
          transform: rotate(-45deg);
}

.form-blue input[type=text] {
  border-bottom: solid 1px #3B82AD;
}

.form-blue .form__button {
  background-color: #3B82AD;
}

.form-blue .form__button:hover {
  color: #3B82AD;
  background-color: #ffffff;
}

.form-blue .form__data:hover input ~ .checkmark {
  background-color: #3B82AD;
}

.form-blue .form__data input:checked ~ .checkmark {
  background-color: #3B82AD;
}

header {
  position: relative;
}

.menu {
  position: fixed;
  height: 4.5rem;
  width: 100%;
  top: 0;
  padding: 4.5vh 3.4vh;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  opacity: 0;
  z-index: 120;
  -webkit-transition: top 0.5s ease-in-out;
  transition: top 0.5s ease-in-out;
}

@media only screen and (min-width: 1100px) {
  .menu {
    height: 5rem;
    padding: 4.5vh 6vh;
  }
}

.menu--intro {
  position: absolute;
  top: 0;
  opacity: 1;
}

.nav {
  display: none;
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out;
}

.nav__logo {
  width: 90px;
}

@media only screen and (min-width: 1100px) {
  .nav__logo {
    width: 110px;
  }
}

.nav--open {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  padding: 8rem 3.4vh 0;
  display: block;
  z-index: 50;
  background-color: rgba(20, 20, 20, 0.98);
}

@media only screen and (min-width: 1100px) {
  .nav--open {
    padding: 20rem 6vh 0;
  }
}

.nav--opacity {
  opacity: 1;
}

@media only screen and (min-width: 1100px) {
  .nav-content {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    margin: 0 auto;
    width: 80%;
  }
}

.nav-toggle {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.nav-toggle:hover {
  color: #E52025;
  cursor: pointer;
}

.nav-toggle:hover .nav-toggle__icon span {
  background: #E52025;
}

.nav-toggle--open span:nth-child(1),
.nav-toggle--open span:nth-child(4) {
  top: 18px;
  width: 0%;
  left: 50%;
}

.nav-toggle--open span:nth-child(2) {
  -webkit-transform: rotate(45deg);
          transform: rotate(45deg);
}

.nav-toggle--open span:nth-child(3) {
  -webkit-transform: rotate(-45deg);
          transform: rotate(-45deg);
}

.nav-toggle__icon {
  width: 30px;
  height: 30px;
  top: 5px;
  position: relative;
  margin-left: 1rem;
  -webkit-transition: .25s ease-in-out;
  transition: .25s ease-in-out;
}

.nav-toggle__icon:hover {
  cursor: pointer;
}

@media only screen and (min-width: 1100px) {
  .nav-toggle__icon {
    width: 40px;
  }
}

.nav-toggle__icon span {
  display: block;
  position: absolute;
  left: 0;
  height: 1px;
  width: 100%;
  background: #ffffff;
  opacity: 1;
  -webkit-transition: .25s ease-in-out;
  transition: .25s ease-in-out;
}

@media only screen and (min-width: 1100px) {
  .nav-toggle__icon span {
    height: 2px;
  }
}

.nav-toggle__icon span:nth-child(1) {
  top: 0px;
}

.nav-toggle__icon span:nth-child(2),
.nav-toggle__icon span:nth-child(3) {
  top: 8px;
}

@media only screen and (min-width: 1100px) {
  .nav-toggle__icon span:nth-child(2),
  .nav-toggle__icon span:nth-child(3) {
    top: 10px;
  }
}

.nav-toggle__icon span:nth-child(4) {
  top: 16px;
}

@media only screen and (min-width: 1100px) {
  .nav-toggle__icon span:nth-child(4) {
    top: 20px;
  }
}

.footer {
  width: 100%;
  margin: 3.4vh auto;
  padding: 0 3.4vh;
}

.footer .footer__social {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.text-center {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin: 3.4vh;
}

@media only screen and (min-width: 1100px) {
  .text-center {
    width: 52.5%;
    min-height: 70vh;
    margin: 0 auto;
  }
}

.text-column__container {
  width: 100vw;
}

.text-column {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  margin: 3.4vh;
}

@media only screen and (min-width: 1100px) {
  .text-column {
    min-height: 85vh;
    margin: 0 auto;
  }
}
/* ... */

